# reasearch_boilerplate

./: .gitignore  pyproject.toml
experiments/: example.py  experiment.py  run_all.py
experiments/datasets/: dataset.py
experiments/result_handler/: result_handler.py
src/dataset/: dataset.py
src/datasets/: dataset.py
src/package1/calculation/: advanced_calc.py
