[project]
name = "example_project"
version = "1.0"
description = ""
authors = [
    {name = "Daniel Bjerkehagen", email = "daniel.bjerkehagen@sintef.no"},
]
dependencies = [
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
experiments = [
    "matplotlib>=3.8.3",
]
